--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <ul>
         <li>Istanbul</li>
         <li>Ankara</li>
+        <Li>Adana</Li>
+        <LI>Sakarya</LI>
+        
     </ul>
 </body>
 </html>
