Yabanci sehitler eklendi

--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 <body>
     <h1> Cities</h1>
     <ul>
-        <li>Istanbul</li>
-        
-        <Li>Adana</Li>
-        <LI>Sakarya</LI> 
-        <li> Erzurum</li>
-
+        <li>Paris</li>
+        <li>Berlin</li>
+        <li>London</li>
     </ul>
 </body>
 </html>
